
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int FIL3 ;
 int b ;
 int exit (int ) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,char*,char*,int ) ;
 int free (int ) ;
 int getFsize (int *,int ) ;
 char* header ;
 char* junk ;
 int print (char*) ;
 int printf (char*,int) ;
 int tail ;

int buildf(char* fname)
  {
      FILE* fp=fopen(fname,"wb");

      if(fp==((void*)0))
      {
         print("File writing error");
         exit(0);
      }
      fprintf(fp,"%s%s%s",header,junk,tail);
      printf("[!]File is %d bytes",getFsize(fp,FIL3));
      fclose(fp);
      free(b);

      return 0;
  }
