; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_11149.c_buildf.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_11149.c_buildf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"File writing error\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"%s%s%s\00", align 1
@header = common dso_local global i8* null, align 8
@junk = common dso_local global i8* null, align 8
@tail = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [20 x i8] c"[!]File is %d bytes\00", align 1
@FIL3 = common dso_local global i32 0, align 4
@b = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @buildf(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32* @fopen(i8* %4, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = call i32 @print(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %10 = call i32 @exit(i32 0) #3
  unreachable

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = load i8*, i8** @header, align 8
  %14 = load i8*, i8** @junk, align 8
  %15 = load i32, i32* @tail, align 4
  %16 = call i32 @fprintf(i32* %12, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i8* %13, i8* %14, i32 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* @FIL3, align 4
  %19 = call i32 @getFsize(i32* %17, i32 %18)
  %20 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0), i32 %19)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @fclose(i32* %21)
  %23 = load i32, i32* @b, align 4
  %24 = call i32 @free(i32 %23)
  ret i32 0
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @print(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fprintf(i32*, i8*, i8*, i8*, i32) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @getFsize(i32*, i32) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
